# lairs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/concepts/: anchors-and-modality.md  architecture.md  generated-models.md  index.md  integrations.md  layers-data-model.md  reproducibility.md
docs/css/: custom.css
docs/development/: codegen.md  index.md  releasing.md  testing.md
docs/guide/: authoring.md  cli.md  codecs.md  codegen.md  dataset-api.md  explorer.md  exporters.md  index.md  knowledge-bases.md  media.md  reading-pds.md  store.md  tracking.md
docs/project/: stability.md
docs/reference/: atproto.md  author.md  cli.md  codecs.md  codegen.md  data.md  discovery.md  explorer.md  exporters.md  index.md  kb.md  media.md  ports.md  records.md  registry.md  store.md  tracking.md  types.md
docs/tutorial/: 01-reading-a-corpus.md  02-materialising-views.md  02-materializing-views.md  03-authoring-and-publishing.md  index.md
lairs/: __init__.py  _aturi.py  _types.py  cli.py
lairs/_codegen/: __init__.py  emit.py  manifest.py  pipeline.py  schema_to_spec.py
lairs/atproto/: __init__.py  _car.py  appview.py  auth.py  blobs.py  firehose.py  identity.py  pds.py
lairs/author/: __init__.py  builders.py  changelog.py  publish.py
lairs/data/: __init__.py  corpus.py  dataset.py  features.py
lairs/discovery/: __init__.py  accelerator.py  actor.py  cards.py  federated.py  index.py  ingest.py  links.py  models.py  query.py  sources.py  summary.py
lairs/integrations/: __init__.py  ports.py  registry.py  tfdata.py  torch.py  tracking.py  webdataset.py
lairs/integrations/codecs/: __init__.py  brat.py  conllu.py
lairs/integrations/hf/: __init__.py  datasets.py  hub.py
lairs/integrations/kb/: __init__.py  glazing.py  reconciliation.py  wikidata.py
lairs/lexicons/: MANIFEST.toml  README.md
lairs/media/: __init__.py  anchors.py  audio.py  neural.py  resolve.py  video.py
lairs/records/: __init__.py  blobref.py  views.py
lairs/records/_generated/: __init__.py  alignment.py  annotation.py  changelog.py  corpus.py  defs.py  eprint.py  expression.py  graph.py  judgment.py  media.py  ontology.py  persona.py  resource.py  segmentation.py
lairs/store/: __init__.py  arrow.py  blobcache.py  pool.py  repository.py
lairs/tui/: __init__.py  app.py  browse.py  query.py  registry.py  styles.tcss  views.py  viz.py
lairs/tui/screens/: __init__.py  browse.py  discover.py  explore.py  query.py  settings.py
tests/: conftest.py  test___init__.py  test__aturi.py  test__types.py  test_cli.py
tests/_codegen/: test___init__.py  test_emit.py  test_manifest.py  test_pipeline.py  test_schema_to_spec.py
tests/atproto/: test___init__.py  test__car.py  test_appview.py  test_auth.py  test_blobs.py  test_firehose.py  test_identity.py  test_pds.py
tests/author/: test___init__.py  test_builders.py  test_changelog.py  test_publish.py
tests/data/: test___init__.py  test_corpus.py  test_dataset.py  test_features.py
tests/discovery/: test___init__.py  test_accelerator.py  test_actor.py  test_cards.py  test_federated.py  test_index.py  test_ingest.py  test_links.py  test_models.py  test_query.py  test_sources.py  test_summary.py
tests/integrations/: test___init__.py  test_ports.py  test_registry.py  test_tfdata.py  test_torch.py  test_tracking.py  test_webdataset.py
tests/integrations/codecs/: test___init__.py  test_brat.py  test_conllu.py
tests/integrations/hf/: test___init__.py  test_datasets.py  test_hub.py
tests/integrations/hf/cassettes/test_hub/: test_load_from_hub_reads_public_dataset.yaml
tests/integrations/kb/: test___init__.py  test_glazing.py  test_reconciliation.py  test_wikidata.py
tests/media/: test___init__.py  test_anchors.py  test_audio.py  test_neural.py  test_resolve.py  test_video.py
tests/pds/: README.md  docker-compose.yml
tests/records/: test___init__.py  test_blobref.py  test_views.py
tests/records/_generated/: test___init__.py
tests/store/: test___init__.py  test_arrow.py  test_blobcache.py  test_pool.py  test_repository.py
tests/tui/: conftest.py  test_app.py  test_browse.py  test_interaction.py  test_query.py  test_viz.py
